--- a/sextant/src/Banner.css
+++ b/sextant/src/Banner.css
@@ -1,6 +1,6 @@
 .banner {
-    background-color: #282c34;
+    background-color: #3C6E71; /* Updated color */
     padding: 20px;
-    color: white;
+    color: #FFFFFF; /* Updated color */
     text-align: center;
-  }
+}
