--- a/sextant/src/index.css
+++ b/sextant/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #D9D9D9; /* Updated color */
+  color: #353535; /* Updated color */
 }
 
 code {
